data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_570.wast
;; 1. **Test Description**: Implement a function with multiple `nop` instructions interleaved with `call` instructions to various other functions. Ensure it calls functions that return different values and validate that the original function's return value is consistent.    - **Constraint Checked**: Ensures `nop` does not alter the return value handling.    - **Relation to Improper Handling**: Incorrect handling of `nop` might interfere with the proper sequence of function calls and returns.

 ;; (module
  (func $returns-i32 (result i32)
    i32.const 42)
  (func $test (result i32)
    nop
    call $returns-i32
    nop
    call $returns-i32
    nop)
  (export "test" (func $test)))
(assert_malformed
  (module
    (func $returns-i32 (result i32)
      i32.const 42)
    (func $test (result i32)
      nop
      call $returns-i32
      nop
      call $returns-i32
      nop))
  "unexpected stack state")